added clans api
